--- a/RestaurantSystem.csproj
+++ b/RestaurantSystem.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DrinkRepository.cs" />
+    <Compile Include="FoodRepository.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
